1. Added more explicit dependency between AggregateMetricsApiCaller and CoresMetricsApiCaller 2. CoresMetricsApiCaller will only fetch metrics that are missing from AggregateMetricsApiCaller 3. Added capability to get property other than counter (for median duration etc) - Added support of key and expr on top of prefix/property for metrics api querying 4. Some fixes to label and unit test cases 5. Added metricType to CoreMetric to retain correct Prometheus metrics type